establish user-login service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring:
     datasource:
         username: qc
         password: qc123456
-        url: jdbc:mysql://localhost:3306/metest?serverTimezone=UTC&userUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://localhost:3306/quickcrave?serverTimezone=UTC&userUnicode=true&characterEncoding=utf-8
         driver-class-name: com.mysql.cj.jdbc.Driver
         type: com.alibaba.druid.pool.DruidDataSource
 
