--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,36 @@
 spring.application.name=QuickCrave-BackEnd
 
-server:
-    port: 8000
+#server.address=localhost
+server.port=8000
 
-spring:
-    datasource:
-        username: qc
-        password: qc123456
-        url: jdbc:mysql://localhost:3306/quickcrave?serverTimezone=UTC&userUnicode=true&characterEncoding=utf-8
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        type: com.alibaba.druid.pool.DruidDataSource
+spring.datasource.username=qc
+spring.datasource.password=qc123456
+spring.datasource.url=jdbc:mysql://localhost:3306/qcdb?useUnicode=true&allowPublicKeyRetrieval=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-        initialSize: 5
-        minIdle: 5
-        maxActive: 20
-        maxWait: 60000
-        timeBetweenEvictionRunsMillis: 60000
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: SELECT 1 FROM DUAL
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        poolPreparedStatements: true
-        filters: stat,wall,log4j
-        maxPoolPreparedStatementPerConnectionSize: 20
-        useGlobalDataSourceStat: true
-        connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 
-mybatis:
-    type-aliases-package: com.quickcravebackend.model
-    mapper-locations: classpath:mapper/*.xml
-#    config-location: classpath:mybatis-config.xml
+mybatis.type-aliases-package=com.quickcravebackend.model
+mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.config-location=classpath:mybatis-config.xml
+
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring:
+#    datasource:
+#        initialSize: 5
+#        minIdle: 5
+#        maxActive: 20
+#        maxWait: 60000
+#        timeBetweenEvictionRunsMillis: 60000
+#        minEvictableIdleTimeMillis: 300000
+#        validationQuery: SELECT 1 FROM DUAL
+#        testWhileIdle: true
+#        testOnBorrow: false
+#        testOnReturn: false
+#        poolPreparedStatements: true
+#        filters: stat,wall,log4j
+#        maxPoolPreparedStatementPerConnectionSize: 20
+#        useGlobalDataSourceStat: true
+#        connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
