add Cors Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=QuickCrave-BackEnd
 
-#server.address=localhost
+server.address=localhost
 server.port=8000
 
 spring.datasource.username=qc
