--- a/pom.xml
+++ b/pom.xml
@@ -113,4 +113,13 @@
         </resources>
     </build>
 
+    <filter>
+        <filter-name>corsFilter</filter-name>
+        <filter-class>com.quickcravebackend.config.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>corsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </project>
