add ssl certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=QuickCrave-BackEnd
 
 server.address=localhost
-server.port=8000
+server.port=12581
+
+server.ssl.key-store=classpath:quickcrave.jks
+server.ssl.key-store-password=qc123456
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=quickcrave
 
 spring.datasource.username=qc
 spring.datasource.password=qc123456
