--- a/pom.xml
+++ b/pom.xml
@@ -110,16 +110,14 @@
                 </includes>
                 <filtering>false</filtering>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>*.jks</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
         </resources>
     </build>
-
-    <filter>
-        <filter-name>corsFilter</filter-name>
-        <filter-class>com.quickcravebackend.config.CorsFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>corsFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
 </project>
