completely devise most of features and interfaces

--- a/src/main/java/com/quickcravebackend/config/database-config.yml
+++ b/src/main/java/com/quickcravebackend/config/database-config.yml
@@ -1,13 +1,20 @@
 
+#  建库
 create database: create database qcdb;
 create user: create user 'qc'@'%' identified by 'qc123456';
 grant privileges: grant all on qcdb.* to 'qc'@'%';
 
+#  id自增
   alter table qcdb.user
   modify id bigint auto_increment;
   
   alter table qcdb.user
   auto_increment = 1;
   
+#  设置非null
   alter table qcdb.user
   modify username varchar(255) not null;
+  
+#  设置外键
+  ALTER TABLE qcdb.goods
+  ADD FOREIGN KEY (`vendor_id`) REFERENCES `vendor` (`id`);
