--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>QuickCrave-BackEnd</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>QuickCrave-BackEnd</name>
     <description>QuickCrave-BackEnd</description>
     <properties>
