add alipay sandbox payment configuration

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.10.0.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
