--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.show-sql=true
 
 mybatis.type-aliases-package=com.quickcravebackend.model
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=16MB
