--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.10.0.ALL</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
